# hybrid-transpiler

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md
docs/: ARCHITECTURE.md  USER_GUIDE.md
examples/: exception_handling.cpp  exception_handling_expected.go  exception_handling_expected.rs  expected_output.go  expected_output.rs  multithreading.cpp  multithreading_expected.go  multithreading_expected.rs  simple_class.cpp  stl_containers.cpp  stl_containers_expected.go  stl_containers_expected.rs
include/: codegen.h  ir.h  transpiler.h
src/: main.cpp  transpiler.cpp
src/codegen/: codegen_base.cpp
src/codegen/go/: go_codegen.cpp
src/codegen/rust/: rust_codegen.cpp
src/ir/: ir_builder.cpp
src/parser/: exception_analyzer.cpp  stl_container_mapper.cpp  thread_analyzer.cpp  type_mapper.cpp
tests/: CMakeLists.txt  test_codegen.cpp  test_main.cpp  test_type_mapping.cpp
